src/round_trip/snapshots/forge__round_trip__divergence_log__tests__clean_pass.snap
---
source: src/round_trip/divergence_log.rs
expression: content
---
{
  "artifact_type": "Catalog",
  "compatibility_classification": "advisory-older-model-baseline",
  "declared_oscal_version": "1.2.3",
  "divergences": [],
  "oscal_cli_model_version": "1.1.2",
  "oscal_cli_version": "1.0.3",
  "passed": true,
  "schema_version_used": "1.2.3",
  "source_path": "/tmp/test/catalog.json"
}
