src/round_trip/snapshots/forge__round_trip__divergence_log__tests__divergences_with_resolutions.snap
---
source: src/round_trip/divergence_log.rs
expression: content
---
{
  "artifact_type": "Catalog",
  "compatibility_classification": "advisory-older-model-baseline",
  "declared_oscal_version": "1.2.3",
  "divergences": [
    {
      "actual": "my-security-policy",
      "classification": "ForgeFix",
      "description": "Title casing not preserved through XML serialization",
      "expected": "My Security Policy",
      "json_path": "/catalog/metadata/title",
      "resolution": "Fixed"
    },
    {
      "actual": null,
      "classification": "Acceptable",
      "description": "Empty array omitted by oscal-cli",
      "expected": [],
      "json_path": "/catalog/groups/0/controls",
      "resolution": "Accepted"
    }
  ],
  "oscal_cli_model_version": "1.1.2",
  "oscal_cli_version": "1.0.3",
  "passed": false,
  "schema_version_used": "1.2.3",
  "source_path": "/tmp/test/catalog.json"
}
