src/round_trip/snapshots/forge__round_trip__divergence_log__tests__unresolved_divergence_null_resolution.snap
---
source: src/round_trip/divergence_log.rs
expression: content
---
{
  "artifact_type": "ComponentDefinition",
  "compatibility_classification": "unavailable",
  "declared_oscal_version": "1.2.3",
  "divergences": [
    {
      "actual": "1.0.0",
      "classification": "OscalCliDiff",
      "description": "Version string modified by oscal-cli",
      "expected": "1.0",
      "json_path": "/component-definition/metadata/version",
      "resolution": null
    }
  ],
  "oscal_cli_model_version": null,
  "oscal_cli_version": null,
  "passed": false,
  "schema_version_used": "1.2.3",
  "source_path": "/tmp/test/component.json"
}
